replace BASE64Encoder with Base64